--- a/public/model/css/core.css
+++ b/public/model/css/core.css
@@ -148,9 +148,73 @@ body{
 	width:100%;
 	font-weight: 1000;
 	font-size:50px;
-	font-family: indie flower;
+	font-family: Sigmar One;
 }
 
 .intro p.para{
+	font-family: indie flower;
+	padding-left:20px;
 	text-indent: 50px;
+}
+
+
+/*rotateCircle*/
+
+#rotateCircle{
+	height:500px;
+	width:500px;
+}
+
+#rotateButton{
+	width:auto;
+	height:500px;
+	position: relative;
+}
+#rotateButton .clicked{
+	height: 40px;
+	width:100px;
+	font-size:20px;
+}
+#rotateButton div{
+	display: block;
+    position: absolute;
+    top: 50%; left: 50%;
+    margin: -2em;
+}
+.deg0 { transform: translate(12em); } /* 12em = half the width of the wrapper */
+.deg45 { transform: rotate(45deg) translate(12em) rotate(-45deg); }
+.deg90 { transform: translateY(12em); }
+.deg135 { transform: rotate(135deg) translate(12em) rotate(-135deg); }
+.deg180 { transform: translate(-12em); }
+.deg225 { transform: rotate(225deg) translate(12em) rotate(-225deg); }
+.deg270 { transform: translateY(-12em); }
+.deg315 { transform: rotate(315deg) translate(12em) rotate(-315deg); }
+
+
+
+
+/*Blog*/
+
+#blog{
+	padding: 20px;
+}
+
+#blog .blogName{
+	font-size: 50px;
+	text-align: center;	
+	font-weight: bolder;
+	font-family: Sigmar One;
+}
+
+#blog .postTime{
+	font-size: 15px;
+	float:right;
+	font-family: 'Poiret One', cursive;
+	font-weight: 100;
+	color: rgba(0,0,0,0.3);
+}
+
+#blog .blogContent{
+	padding-top:40px;
+	text-indent: 50px;	
 }
