--- a/public/model/view/content.html
+++ b/public/model/view/content.html
@@ -1,10 +1,10 @@
-<section  data-ng-controller = "content">
+<section>
 
 	<div class = "banner">
 		<ul id = "myPanel" class = "list-inline">
 			<li data-panel = "panel1" class = "cus-list active">Introduction</li>
-			<li data-panel = "panel2" class = "cus-list">list 2</li>
-			<li data-panel = "panel3" class = "cus-list">list 3</li>
+			<li data-panel = "panel2" class = "cus-list">Cool-Components</li>
+			<li data-panel = "panel3" class = "cus-list">Moments</li>
 		</ul>
 	</div>
 	
@@ -18,6 +18,12 @@
 			<p class = "para">
 				This is a personal webpage, that is build using Jquery, AngularJS in the front end, and php at the back end. I will add cool features along the way. 
 			</p>
+			<p class = "para">
+				Current Progress:<br>
+				<p class = "para">
+				Just start working on the backend, a database connection is in session.
+				</p> 
+			</p>
 
 			<span class = "headline">
 				About me
@@ -27,39 +33,22 @@
 				My name is Qian Wang. I am a senior student studying Computer Engineering at University of Florida. 
 			</p>
 			<p class = "para">
-				Web development is always a passion of mine. For some odd reason, university never offer any class that are relates to web development, other than SQL. I learned Html, css, PHP, javaScript on my own, and in that order as well. I really enjoying working on both frontend and backend of web development. I've introduced myself to MeanJS framework and Zend2. But this website is build with angularJS at the frontend, and php supports the backend. I would love to use NodeJS at the backend. However, my server host(ipage) doesn't seem to support it. 
+				Web development is always a passion of mine. For some odd reason, university never offer any class that are relates to web development, other than SQL. I learned Html, css, PHP, javaScript on my own, and in that order as well. I really enjoy working on both frontend and backend of web development. I've introduced myself to MeanJS framework and Zend2. Hovever, this site is build with neither, it is a combination of angularJS at the frontend, and php supports the backend. I would love to use NodeJS at the backend. Once, my server can support NodeJS, it will be the next step
 			</p>			
 			<p class = "para">
-				I am always looking for project to work on and people that have the same passion about web development. If there is anyone interested, I am willing to assit you in your project or work on a fresh new idea that you had. 
+				I am always looking for project to work on and people that have the same passion about web development. If there is anyone interested, I am willing to assit you in your project or work on a fresh new idea that you had. If you are interested, you might check out my <a href = "https://github.com/qianwang1013">Github<a/> account.
 			</p>
 		</div>
 	</div>
 	
 	<div id = "panel2" class = "panel">
-		<div class = "notes">
-		Display 2
-		</div>
-
-		<div class = "notes">
-			<img src = "model/img/pic.jpg"></img>
-			<div class = "comment">
-				Hola
-			</div>
-		</div>
+		<section data-ng-include = "'public/model/view/rotateView.html'">			
+		</section>
 	</div>
 
-	<div id = "panel3" class = "panel">
-		<div class = "notes">
-		Display 3
-		</div>
-
-		<div class = "notes">
-			<img src = "model/img/pic.jpg"></img>
-			<div class = "comment">
-				Hola
-			</div>
-		</div>
+	<div id = "panel3" class = "panel container">
+		<section data-ng-include = "'public/model/view/blog.html'">
 	</div>
 	</div>
-	<script type="text/javascript" src = "model/jquery/content.js"></script>
+	<script type="text/javascript" src = "public/model/jquery/content.js"></script>
 </section>
