--- a/public/model/view/header.html
+++ b/public/model/view/header.html
@@ -2,8 +2,8 @@
 <section class = "board" data-ng-controller = "header">
 
 	<div class = "icon">
-		<img src="model/img/pic.jpg" alt="Smiley face" height="400" width="400" class ="img-thumbnail"/>
+		<img src="public/model/img/pic.jpg" alt="Smiley face" height="400" width="400" class ="img-thumbnail"/>
 	</div>
 
-	<script type="text/javascript" src = "model/jquery/header.js"></script>
+	<script type="text/javascript" src = "public/model/jquery/header.js"></script>
 </section>
