adding much more new stuff

--- a/public/model/css/core.css
+++ b/public/model/css/core.css
@@ -94,7 +94,7 @@ body{
 /*  Panel  */
 .banner{
 	display:block;
-	height:105px;
+	min-height: 105px;
 	width:100%;
 	background: #EC583A;
 	padding-left:75%;
@@ -107,20 +107,24 @@ body{
 	position:fixed;
 }
 
+
 #myPanel li.cus-list{
+	background: #EC583A;
 	font-family:Lobster;
 	font-weight: 900;	
 	padding-top: 35px;
 	color:white;
 	height:105px;
-	border-right: 3px solid #FFA473;
 	margin:0px;
-	overflow: hidden;
+}
+
+.ver-list{
+	list-style: none;
+	display: block;
 }
 
 #myPanel li.active{
 	color:#FFA473;
-	box-shadow: 0px 18px 59px 0px #FFA473;
 }
 .content{
 	margin-top:50px;
@@ -222,4 +226,12 @@ body{
 #blog .action-buttons{
 	float:right;
 	padding-left:10px;
+}
+
+.bars-active{
+	color:white;
+}
+
+.cus-fa{
+	display:none;
 }
