--- a/public/model/view/content.html
+++ b/public/model/view/content.html
@@ -1,11 +1,13 @@
 <section>
 
 	<div class = "banner">
+	<span class = "fa fa-bars fa-4x cus-fa"></span>
 		<ul id = "myPanel" class = "list-inline">
 			<li data-panel = "panel1" class = "cus-list active">Introduction</li>
 			<li data-panel = "panel2" class = "cus-list">Cool-Components</li>
 			<li data-panel = "panel3" class = "cus-list">Moments</li>
 		</ul>
+
 	</div>
 	
 	<div class = "container content">
